# conv-net-version-3

./: CMakeLists.txt  README.md  config.txt
src/: CMakeLists.txt  README.md  branch_layer.cc  channel_3.cc  channel_3.h  combine_layer.cc  config.txt  converter.cc  converter.h  convolution.cc  convolution.h  convolutional_layer.cc  cost_gradient.cc  cost_gradient.h  data_augmentation.cc  data_augmentation.h  data_enlarge.cc  data_structure.h  dropout_layer.cc  fully_connected_layer.cc  general_settings.h  get_sample.cc  get_sample.h  gradient_checking.cc  gradient_checking.h  helper.cc  helper.h  input_layer.cc  layer_bank.h  local_response_normalization_layer.cc  matrix_maths.cc  matrix_maths.h  network_layer.cc  non_linearity_layer.cc  pooling_layer.cc  read_config.cc  read_config.h  read_data.cc  read_data.h  result_predict.cc  (+13 more)
